@@ -27,7 +27,8 @@ SQLAlchemy integration for Kiwi
 from sqlalchemy import and_, or_
 
 from kiwi.db.query import NumberQueryState, StringQueryState, \
-     DateQueryState, DateIntervalQueryState, QueryExecuter
+     DateQueryState, DateIntervalQueryState, QueryExecuter, \
+     NumberIntervalQueryState
 from kiwi.interfaces import ISearchFilter
 
 
@@ -151,6 +152,8 @@ class SQLAlchemyQueryExecuter(QueryExecuter):
             table_field = getattr(table.c, column)
             if isinstance(state, NumberQueryState):
                 query = self._parse_number_state(state, table_field)
+            elif isinstance(state, NumberIntervalQueryState):
+                query = self._parse_number_interval_state(state, table_field)
             elif isinstance(state, StringQueryState):
                 query = self._parse_string_state(state, table_field)
             elif isinstance(state, DateQueryState):
@@ -169,6 +172,15 @@ class SQLAlchemyQueryExecuter(QueryExecuter):
     def _parse_number_state(self, state, table_field):
         if state.value is not None:
             return table_field == state.value
+
+    def _parse_number_interval_state(self, state, table_field):
+        queries = []
+        if state.start:
+            queries.append(table_field >= state.start)
+        if state.end:
+            queries.append(table_field <= state.end)
+        if queries:
+            return and_(*queries)
 
     def _parse_string_state(self, state, table_field):
         if state.text is not None:
